--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-light text-dark">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark text-light">
         <a class="navbar-brand" href="">
             <img width = "40%" src="logo_colored.png">
         </a>
@@ -24,9 +24,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-                    
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href= "home.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="projects.html">Projects</a>
@@ -37,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="resources.html">Resources</a>
                     </li>
+                   
+
+
 
                 </ul>
 
